--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,6 @@ a {
   text-decoration: none;
 }
 
-.img {
-  display: block;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -29,10 +25,6 @@ h5,
 h6,
 p {
   margin: 0;
-}
-
-h3 {
-  padding-bottom: 8px;
 }
 
 .container {
@@ -69,6 +61,9 @@ h3 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+}
+
+.header-logo {
   padding: 24px 0;
   margin-right: 76px;
 }
@@ -145,6 +140,9 @@ h3 {
   color: #ffffff;
   cursor: pointer;
   display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
   border-radius: 4px;
   padding: 16px 32px;
   margin: 0 auto;
@@ -191,7 +189,7 @@ h3 {
 }
 
 .content-team {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .section-title {
@@ -202,7 +200,7 @@ h3 {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .section-team {
@@ -230,6 +228,7 @@ h3 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .team-text {
@@ -247,6 +246,7 @@ h3 {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .section-text {
@@ -262,9 +262,9 @@ h3 {
 }
 
 .portfolio-item {
-  padding-bottom: 32px;
-  padding-top: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .portfolio-list {
@@ -274,7 +274,8 @@ h3 {
 .our-portfolio {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .footer {
@@ -282,9 +283,9 @@ h3 {
   padding: 100px 0;
 }
 
-.fotter-cnt {
+.footer-logo {
   display: inline-block;
-  max-width: 264px;
+  margin-bottom: 16px;
 }
 
 .footer-logo-accent {
@@ -297,5 +298,5 @@ h3 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 16px;
+  max-width: 264px;
 }
