--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ p {
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
   max-width: 496px;
   margin: 0 auto;
 }
